--- a/apps/frontend/src/modules/App/App.scss
+++ b/apps/frontend/src/modules/App/App.scss
@@ -1,6 +1,7 @@
-@import "../../main";
+@use "../../../index";
 :host{}
 .App{
   display: inline-block;
-  border: 1px solid red;
+  border: 2px solid blue;
+  padding: 2rem;
 }
